infrastructures/dev/raininfra-dev/kyverno-sample/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: kyverno-demo
  name: kyverno-demo
