infrastructures/dev/raininfra-dev/kyverno-sample/invalid-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy-fail
  namespace: kyverno-demo
  labels:
    app.kubernetes.io/name: deploy-fail
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: deploy-fail
  template:
    metadata:
      labels:
        app.kubernetes.io/name: deploy-fail
    spec:
      containers:
        - name: pause
          image: registry.k8s.io/pause:3.9
          resources:
            requests:
              cpu: 10m
              memory: 16Mi
            limits:
              memory: 32Mi
